# Kosciuszkon

./: .gitignore  README.md  toFile.py
api/: pyproject.toml
api/app/: app.py  db.py
api/app/models/: __init__.py  family.py  notification.py  training_message.py  user.py  user_family.py
api/app/routes/: __init__.py  auth.py  chatbot.py  family.py  notification.py  predict.py  scan.py  training.py
api/app/schemas/: __init__.py  auth_request.py  auth_response.py  chat_schema.py  family_request.py  family_response.py  notification_schemas.py  notification_type.py  predict_schema.py  scan_schemas.py  training_schema.py
api/app/services/: __init__.py  auth_service.py  chatbot_service.py  family_service.py  llm_service.py  notification_service.py  predict_service.py  scan_services.py  training_service.py  translation_service.py
api/app/utils/: __init__.py  web_error_handler.py
api/ml_pipeline/: import_csv.py  train.py
api/tests/: test_models.py
gui/: package.json  tailwind.config.js
gui/public/: index.html
gui/src/: App.js  index.css  index.js  main.js
gui/src/components/: index.js
gui/src/components/auth/: FormInput.js  SubmitButton.js
gui/src/components/layout/: Footer.js  Navbar.js  Sidebar.js  Topbar.js  layout.css
gui/src/components/sections/: AnalysisLab.js  Features.js  Hero.js
gui/src/pages/: index.js
gui/src/pages/Auth/: AuthLayout.js  (+2 more)
gui/src/services/: AuthService.js  ChatbotService.js  FamilyService.js  NotificationService.js  PredictService.js  TrainingService.js  api.js  index.js
plugin/: content.js  popup.html  popup.js
(+19 files in other folders)
