[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kosciuszkon"
version = "0.1.0"
description = "Flask backend"
requires-python = ">=3.10"

dependencies = [
    "flask",
    "flask-cors",
    "flask-jwt-extended",
    "python-dotenv",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "pydantic",
]

[tool.setuptools]
packages = ["app"]
